objects/ACLS_IntegrationConfig__mdt.object
<CustomObject>
    <description>Stores all the integration configuration, endpoint, custom headers and details.</description>
    <fields>
        <fullName>ACLS_APIKey__c</fullName>
        <description>Stores the API key for applicable integrations</description>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_BaseURL__c</fullName>
        <description>Base Url / domain for the integration</description>
        <label>BaseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Endpoint__c</fullName>
        <description>Endpoint for the individual integration</description>
        <label>Endpoint</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACLS_Environment__c</fullName>
        <description>Specifies the Ashfield CLS environment for the applicable integration endpoint</description>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEV</fullName>
                    <default>true</default>
                    <label>DEV</label>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>SIT</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>TRAIN</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Headers__c</fullName>
        <description>Specifies the custom headers to be included with request in a JSON form</description>
        <label>Headers</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACLS_IntegrationName__c</fullName>
        <description>Specifies the integration name for which the domain , header details and other configurations are required</description>
        <label>Integration Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Five9 SMS Token</fullName>
                    <default>true</default>
                    <label>Five9 SMS Token</label>
                </value>
                <value>
                    <fullName>Five9 SMS OptIn</fullName>
                </value>
                <value>
                    <fullName>Five9 SMS SendSMS</fullName>
                </value>
                <value>
                    <fullName>Five9 SMS GetStatus</fullName>
                </value>
                <value>
                    <fullName>RisRx Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Melissa Address</fullName>
                </value>
                <value>
                    <fullName>HC Split</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>eFax Fax Token</fullName>
                </value>
                <value>
                    <fullName>eFax Fax SendFax</fullName>
                </value>
                <value>
                    <fullName>eFax Fax GetStatus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACLS_Integration_Procedure_Name__c</fullName>
        <description>Stores the Integration Procedure Name</description>
        <label>Integration Procedure Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Timeout__c</fullName>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Configuration</label>
    <listViews>
        <fullName>Custom</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>ACLS_IntegrationName__c</columns>
        <columns>ACLS_APIKey__c</columns>
        <columns>ACLS_BaseURL__c</columns>
        <columns>ACLS_Endpoint__c</columns>
        <columns>ACLS_Timeout__c</columns>
        <columns>ACLS_Environment__c</columns>
        <filterScope>Everything</filterScope>
        <label>Custom</label>
    </listViews>
    <pluralLabel>Integration Configurations</pluralLabel>
</CustomObject>